tests/error/class-13.moc
@class Point {
    int x;
    int y;
}

-(id)x {
    [super x];
}

@end
